--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,27 @@ if (NOT TARGET st7735_80x160)
     # Driver initialize (STATIC or INTERFACE, second basically contains only .h headers)
     add_library(st7735_80x160 STATIC)
 
-    # Including .c files (PRIVATE - only library can access code files)
+    # Including .c/.cpp files (PRIVATE - only library can access code files)
     target_sources(st7735_80x160 PRIVATE
-        ${LIBRARIES_DIR}/st7735_80x160/src/st7735.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/st7735.cpp
     )
     
-    # Including .h header files (PUBLIC - user can use driver only through 'friendly' header)
+    # Including .h header files (PUBLIC - user can use driver only through 'friendly' header including)
     target_include_directories(st7735_80x160 PUBLIC
-        ${LIBRARIES_DIR}/st7735_80x160/include
+        ${CMAKE_CURRENT_LIST_DIR}/include
     )
 
-    # Including additional libraries (PRIVATE - these libraries don't read this one)
-    target_link_libraries(st7735_80x160 PRIVATE
+    # Including required public libraries
+    # (PUBLIC - these libs imports to project by main header including)
+    target_link_libraries(st7735_80x160 PUBLIC
         hardware_spi
         hardware_clocks
         hardware_pwm
+    )
 
+    # Including private libraries 
+    # (PRIVATE - these libs you need to import from project)
+    target_link_libraries(st7735_80x160 PRIVATE
         pico_stdlib
     )
 
